@@ -1,6 +1,5 @@
 /* Yet another mysterious gimplifier crasher.  */
 /* { dg-do compile } */
-/* { dg-xfail-if "PR23716" { ! *-*-darwin* } { "*" } { "" } } */
 /* { dg-prune-output ".*internal compiler error.*" } */
 /* { dg-options "-O3" } */
 
