@@ -1,3 +1,11 @@
+2010-06-07  Iain Sandoe <iains@gcc.gnu.org>
+
+	Backport from mainline:
+	2010-04-07  Iain Sandoe <iains@gcc.gnu.org>
+
+	PR objc++/23716
+	* obj-c++.dg/comp-types-10.mm: Remove XFAIL.
+
 2010-06-04  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	Backport from mainline:
